修复了在安卓端向下画时体验不良好的bug

--- a/style.css
+++ b/style.css
@@ -5,4 +5,12 @@
 }
 #canvas {
   display: block;
+  position: fixed;
+}
+
+body {
+  overflow: hidden; /*解决在手机上页面会滚动的bug*/
+  position: fixed;
+  top: 0;
+  left: 0;
 }
